--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,28 @@
 // Navigation Styles here
+
+header {
+    border-bottom: @fun-bus-border;
+
+    .navigation-container {
+        display: flex;
+        justify-content: space-between;
+        padding: 20px 0;
+        max-width: 800px;
+        width: 100%;
+        margin: 0 auto;
+
+        nav {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            a {
+                color: black;
+                text-decoration: none;
+                font-size: 1.6rem;
+                padding-right: 20px;
+            }
+        }
+    }
+}
+
+
