--- a/css/index.css
+++ b/css/index.css
@@ -201,6 +201,15 @@ header .navigation-container nav a {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .intro {
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .intro H1 {
+  padding-bottom: 10px;
+}
+.home .intro img {
+  margin-bottom: 30px;
+}
 .home .content-section {
   margin: 30px 0;
   display: flex;
