--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,14 @@
 .home {
+  .intro {
+    border-bottom: @fun-bus-border;
 
+    H1 {
+      padding-bottom: 10px;
+    }
+    img {
+      margin-bottom: 30px;
+    }
+  }//intro
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -57,5 +66,5 @@
       width: 30%;
       margin-bottom: 30px;
     }
-  }
+  }//content section
 }// home
