--- a/less/home-page.less
+++ b/less/home-page.less
@@ -65,6 +65,11 @@
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      .btn{
+        .default-button(@white, @eastern-blue);
+        
+      }
     }
   }//content section
 }// home
