--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,18 @@
 // Mixins in here
+
+.default-button (@font-color, @background-color){
+    color: @font-color;
+    background: @background-color;
+    text-align: center;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 1.6rem;
+    text-decoration: none;
+    display: inline-block;
+
+    &:hover {
+        cursor: pointer;
+        background: pink;
+    }
+}
