--- a/less/variables.less
+++ b/less/variables.less
@@ -14,5 +14,7 @@
 @sandy-beach: #FFEBCD;
 
 // Border Variable
-
 @fun-bus-border: 2px dashed @navigation-border;
+
+// Responsive Break Points
+@mobile: ~'(max-width: 500px)';
