--- a/less/global.less
+++ b/less/global.less
@@ -51,6 +51,9 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+
+  // .animations-mixin(2s, 0s);
+
   @media @mobile {
     padding: 0 20px;
   }
