--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,9 @@
   .intro {
     border-bottom: @fun-bus-border;
 
+
+    .animations-mixin(1s, 1s);
+
     H1 {
       padding-bottom: 10px;
     }
@@ -15,7 +18,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
+    .animations-mixin(3s, 1.5s);
     
     .text-content {
       width: 48%;
@@ -74,6 +77,8 @@
     width: 75%;
     margin: 0 auto 30px;
 
+    .animations-mixin(4s, 3s);
+
     @media @mobile {
       width: 100%;
     }
@@ -88,6 +93,16 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    :nth-child(1){
+      .animations-mixin(1s, 5s);
+    }
+    :nth-child(2){
+      .animations-mixin(1s, 5.5s);
+    }
+    :nth-child(3){
+      .animations-mixin(1s, 6s);
+    }
+
     
     @media @mobile {
       flex-direction: column;
